# RestInioBackend

./: .gitignore  CMakeLists.txt  conanfile.txt  conaninfo.txt  debug.sh  install_deps_ubuntu.sh  main.cpp  readme.md  release.sh  setup.sh  setup_date_base.txt
hello-build/: CMakeCache.txt  Makefile  RestInoBackend  cmake_install.cmake
includes/: BDError
includes/answers/: answers.h
includes/handlers/: all_handlers.h  handler_delete_id.h  handler_imports.h  handler_nodes_id.h  handler_not_matched.h  handler_updates.h  handlers_node_id_history.h  include_handlers
includes/items/: SystemItem
includes/server/: server.h
includes/support/: support.h
profiles/: debug  dll  release
src/: SystemItem.cpp
